<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Christchurch Metro</string>
    <string name="short_app_name">Chch Metro</string>

    <!-- Menu strings -->
    <string name="bus_exchange">Bus Exchange</string>
    <string name="bealey_ave_terminus">Bealey Ave Terminus</string>
    <string name="parkside_terminus">Parkside Terminus</string>
    <string name="central_station">Central Station</string>
    <string name="details">Details</string>
    <string name="favourite_stops">Favourite stops</string>
    <string name="map">Map</string>
    <string name="my_location">My Location</string>
    <string name="options">Options</string>
    <string name="remove_from_favourites">Remove from favourites</string>
    <string name="refresh">Refresh</string>
    <string name="routes">Routes</string>
    <string name="routes_for_stop">Routes for stop</string>
    <string name="search">Search</string>
    <string name="show_on_map">Show on map</string>
    <string name="timetable">Timetable</string>

    <string name="search_hint">Search stops or streets</string>
    <string name="no_results">No matches</string>
    <string name="no_results_description">Unable to find any matches to your search.</string>

    <!-- FavouritesActivity -->
    <string name="favourites_window_title">Chch Metro - Favourite stops</string>
    <string name="no_favourites">No Favourites</string>
    <string name="no_favourites_help">You don\'t have any favourite stops saved yet.  Select \'Search\' or \'Map\' from the menu to find stops and add them to your favourites list</string>
    <string name="next_bus_loading">Next bus: Loading &#8230;</string>
    <string name="unable_to_retrieve_information">Unable to retrieve information</string>
    <string name="no_buses_due">No buses due in the next 30 minutes</string>
    <string name="route_update_required">Route update required</string>
    <string name="do_you_want_to_load_bus_stop_and_route_data">Do you want to load bus stop and route data?  You can do it later from <i>Menu &gt; Preferences</i>.</string>
    <string name="load_now">Load now</string>
    <string name="do_it_later">Do it later</string>

    <!-- PlatformActivity -->
    <string name="platform_info">Road Name: %1$s\nPlatform Number: %2$s\nPlatform Tag: %3$s\nLatitude: %4$f\nLongitude: %5$f</string>
    <string name="unable_to_find_stop">Unable to find stop</string>
    <string name="added_to_favourites">Added \'%1$s\' to favourites</string>
    <string name="removed_from_favourites">Removed \'%1$s\' from favourites</string>
    <string name="loading_arrivals">Loading arrivals &#8230;</string>
    <string name="unable_to_retrieve_arrival_information">Unable to retrieve arrival information.</string>
    <string name="no_arrivals_in_the_next_thirty_minutes">No arrivals for this stop in the next 30 minutes</string>
    <string name="set_alarm_for_eta">Set alarm for %1$d mins eta from stop</string>
    <string name="set_alarm">Set alarm</string>
    <string name="alarm_dialog_text">Send a notification when the bus is this many minutes from this stop</string>

    <!-- ArrivalNotificationReceiver -->
    <string name="route_number_to_destination">%1$s to %2$s</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="go">Go</string>
    <string name="set">Set</string>
    <string name="min">min</string>
    <string name="mins">mins</string>

    <plurals name="mins">
      <item quantity="one">1 min</item>
      <item quantity="other">%d mins</item>
    </plurals>

    <plurals name="minutes">
      <item quantity="one">1 minute</item>
      <item quantity="other">%d minutes</item>
    </plurals>

    <plurals name="due_in_n_minutes">
      <item quantity="one">Due in 1 minute</item>
      <item quantity="other">Due in <xliff:g id="number">%d</xliff:g> minutes</item>
    </plurals>

    <!-- Preferences screen -->
    <string name="preferences">Preferences</string>
    <string name="update_routes">Update routes</string>
    <string name="update_routes_summary">Fetch the latest route information from the MetroInfo system</string>
    <string name="loading_routes">Loading routes</string>
    <string name="loading_platforms">Loading platforms</string>
    <string name="loaded_route_information">Loaded route information</string>
    <string name="error_loading_bus_routes">Error loading bus routes, please try again later</string>
    
</resources>
