<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/search"
          android:icon="@drawable/ic_menu_search"
          android:title="@string/search" />
    <item android:id="@+id/favourite_stops"
          android:icon="@drawable/ic_menu_favourites"
          android:title="@string/favourite_stops" />
    <item android:id="@+id/routes"
          android:icon="@drawable/ic_menu_directions"
          android:title="@string/routes" />
    <item android:id="@+id/my_location"
          android:icon="@drawable/ic_menu_mylocation"
          android:title="@string/my_location" />
    <item android:id="@+id/central_station"
          android:icon="@drawable/ic_menu_exchange"
          android:title="@string/central_station" />
    <item android:id="@+id/preferences"
          android:icon="@drawable/ic_menu_preferences"
          android:title="@string/preferences" />
</menu>
